# Dev_BackEnd

./: CMakeLists.txt  CMakeSettings.json  MyGlobalImports.cmake  MyImports.cmake  MyLocalImports.cmake  README.md
BackEnd/: CMakeLists.txt  Main.cpp  MainInit.cpp  backendCommandThread_thread.cpp  backendControlThread.h  backendControlThread_exec.cpp  backendControlThread_thread.cpp  backendIsochThread.cpp  backendIsochThread.h  backendSettings.cpp  backendSettings.h
BackEnd2/: CMakeLists.txt  backendIsochThread.h
BackEnd3/: CMakeLists.txt  MainInit.cpp  backendControlThread.h  backendControlThread_proc.cpp  backendControlThread_thread.cpp  backendIsochThread.cpp  backendSettings.cpp  backendSettings.h
BackEndDLL/: CMakeLists.txt  MainInit.cpp  backendDefs.cpp  backendDefs.h  backendExports.cpp  backendExports.h  backendInterfaceThread.cpp  backendInterfaceThread.h  dllmain_win.cpp
BackEndLib/: CMakeLists.txt  ProcInit.cpp  ProcInit.h  backendExports.cpp  backendExports.h  backendInterfaceThread.cpp  backendInterfaceThread.h
BackEndUdp/: CMakeLists.txt  CmdLineExec.cpp  Main.cpp  MainInit.cpp  backendCommandThread.h  backendCommandThread_exec.cpp  backendCommandThread_thread.cpp  backendSettings.cpp  backendSettings.h  backendStatusThread.cpp  backendStatusThread.h
FrontEnd/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp
Json/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp
MyNodeAddOn/: CMakeLists.txt  MainProc.cpp  stdafx.h
Stash/: backendInterfaceThread.h
Test/: CMakeLists.txt  CmdLineExec.cpp
